testsuite/tests/explicit-dicts/should_fail/Incoherence3.stderr

Incoherence3.hs:10:12: error:
    • Explicit dictionary application to: ‘Eq a’
      is not allowed because the instance incoherence check
      requires that its type arguments do not occur in an equality,
      found: ‘a ~ b’
    • In the expression: foo ((dict :: Eq a))
      In an equation for ‘bar’: bar dict = foo ((dict :: Eq a))
